--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Page1" />
-        <activity android:name=".Page2"></activity>
+        <activity android:name=".Page2" />
+        <activity android:name=".FlashActivity"></activity>
     </application>
 
 </manifest>
